# EMS

./: EMS.cpp  examdetails.txt  students.txt  teachers.txt
Desktop/EMS/: CMakeLists.txt  admin.cpp  admin.h  admin.ui  admin_user.cpp  admin_user.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  student.cpp  student.h  student.ui  teacher.cpp  teacher.h  teacher.ui  user.cpp  user.h
Desktop/EMS/exam/: 102.txt  103.txt  104.txt  105.txt  examdetails.txt
Desktop/EMS/user/: admin.txt  student.txt  teacher.txt
exam/: 1.txt  100.txt  102.txt  110.txt  examdetails.txt
submissions/: Hariraam_100.txt  Hariraam_110.txt
